--- a/notebooks/Prepare dataset + train .ipynb
+++ b/notebooks/Prepare dataset + train .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "1a73e17b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "2c801b2b",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "0422f932",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
        "4   normal  normal_102.png"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "dbe088db",
    "metadata": {},
    "outputs": [],
@@ -122,17 +122,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "5b5fbf96",
+   "execution_count": 5,
+   "id": "4485f333",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['label'] = preprocessing.LabelBinarizer().fit_transform(df.category)"
+    "lbr = preprocessing.LabelBinarizer().fit(df.category)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
+   "id": "2af44aab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7ca427cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('binarizer', 'wb') as handle:\n",
+    "    pickle.dump(lbr,handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5b5fbf96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['label'] = lbr.transform(df.category)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "3daf05f2",
    "metadata": {},
    "outputs": [],
@@ -142,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "cce10416",
    "metadata": {},
    "outputs": [],
@@ -152,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "4ffc7269",
    "metadata": {},
    "outputs": [
@@ -259,7 +290,7 @@
        "[715 rows x 2 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "d47e6d0c",
    "metadata": {},
    "outputs": [],
@@ -280,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "id": "e2b35a1f",
    "metadata": {},
    "outputs": [
@@ -387,7 +418,7 @@
        "[572 rows x 2 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,15 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5408dbd6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "id": "dd0e13d5",
    "metadata": {},
    "outputs": [],
@@ -417,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "id": "54fcf814",
    "metadata": {},
    "outputs": [],
@@ -431,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "id": "376740ab",
    "metadata": {},
    "outputs": [],
@@ -441,17 +464,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "id": "0c54576c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2278a80e8e0>"
+       "<matplotlib.image.AxesImage at 0x28e474a18e0>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -474,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "id": "9530b0f1",
    "metadata": {},
    "outputs": [],
@@ -484,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "id": "b6151187",
    "metadata": {},
    "outputs": [],
@@ -494,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "id": "c456f54e",
    "metadata": {},
    "outputs": [],
@@ -504,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "id": "cac8b583",
    "metadata": {},
    "outputs": [],
@@ -514,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "id": "56d8b35b",
    "metadata": {},
    "outputs": [],
@@ -527,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "id": "1348806a",
    "metadata": {},
    "outputs": [],
@@ -537,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "id": "cfb1fcb8",
    "metadata": {},
    "outputs": [
@@ -547,7 +570,7 @@
        "(572, 128, 128, 1)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "id": "47b1f785",
    "metadata": {},
    "outputs": [],
@@ -570,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "id": "99a66c39",
    "metadata": {},
    "outputs": [],
@@ -580,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "id": "2c57dafe",
    "metadata": {},
    "outputs": [],
@@ -593,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "id": "31f2d776",
    "metadata": {},
    "outputs": [],
@@ -603,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "id": "a9bca121",
    "metadata": {},
    "outputs": [],
@@ -615,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 31,
    "id": "370c5929",
    "metadata": {},
    "outputs": [],
@@ -625,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 32,
    "id": "bf436615",
    "metadata": {},
    "outputs": [],
@@ -649,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 33,
    "id": "13cddea8",
    "metadata": {},
    "outputs": [
@@ -657,27 +680,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_2 (Conv2D)           (None, 126, 126, 6)       60        \n",
+      " conv2d (Conv2D)             (None, 126, 126, 6)       60        \n",
       "                                                                 \n",
-      " average_pooling2d_2 (Averag  (None, 63, 63, 6)        0         \n",
+      " average_pooling2d (AverageP  (None, 63, 63, 6)        0         \n",
+      " ooling2D)                                                       \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 61, 61, 16)        880       \n",
+      "                                                                 \n",
+      " average_pooling2d_1 (Averag  (None, 30, 30, 16)       0         \n",
       " ePooling2D)                                                     \n",
       "                                                                 \n",
-      " conv2d_3 (Conv2D)           (None, 61, 61, 16)        880       \n",
+      " flatten (Flatten)           (None, 14400)             0         \n",
       "                                                                 \n",
-      " average_pooling2d_3 (Averag  (None, 30, 30, 16)       0         \n",
-      " ePooling2D)                                                     \n",
+      " dense (Dense)               (None, 120)               1728120   \n",
       "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 14400)             0         \n",
+      " dense_1 (Dense)             (None, 84)                10164     \n",
       "                                                                 \n",
-      " dense_3 (Dense)             (None, 120)               1728120   \n",
-      "                                                                 \n",
-      " dense_4 (Dense)             (None, 84)                10164     \n",
-      "                                                                 \n",
-      " dense_5 (Dense)             (None, 1)                 85        \n",
+      " dense_2 (Dense)             (None, 1)                 85        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1,739,309\n",
@@ -693,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 34,
    "id": "004766c4",
    "metadata": {},
    "outputs": [],
@@ -703,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 35,
    "id": "da9a7355",
    "metadata": {},
    "outputs": [],
@@ -713,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 36,
    "id": "7ac7e5f8",
    "metadata": {},
    "outputs": [],
@@ -724,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 37,
    "id": "4e936e79",
    "metadata": {},
    "outputs": [],
@@ -736,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 38,
    "id": "daaa042c",
    "metadata": {},
    "outputs": [
@@ -744,7 +767,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Taufeeq\\AppData\\Local\\Temp/ipykernel_52380/425097378.py:5: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+      "C:\\Users\\Taufeeq\\AppData\\Local\\Temp/ipykernel_31644/425097378.py:5: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
       "  model.fit_generator(train_generator, steps_per_epoch=steps_per_epoch, epochs=EPOCHS,\n"
      ]
     },
@@ -753,44 +776,44 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "11/11 [==============================] - 2s 99ms/step - loss: 9.7560 - accuracy: 0.7261 - val_loss: 6.6580 - val_accuracy: 0.8800\n",
+      "11/11 [==============================] - 2s 107ms/step - loss: 138.0112 - accuracy: 0.6494 - val_loss: 86.9224 - val_accuracy: 0.7500\n",
       "Epoch 2/15\n",
-      "11/11 [==============================] - 1s 92ms/step - loss: 5.5829 - accuracy: 0.8563 - val_loss: 4.4289 - val_accuracy: 0.8900\n",
+      "11/11 [==============================] - 1s 89ms/step - loss: 65.1070 - accuracy: 0.7874 - val_loss: 50.3014 - val_accuracy: 0.8600\n",
       "Epoch 3/15\n",
-      "11/11 [==============================] - 1s 89ms/step - loss: 3.9779 - accuracy: 0.8448 - val_loss: 3.4980 - val_accuracy: 0.9100\n",
+      "11/11 [==============================] - 1s 93ms/step - loss: 41.5673 - accuracy: 0.8295 - val_loss: 31.9791 - val_accuracy: 0.9100\n",
       "Epoch 4/15\n",
-      "11/11 [==============================] - 1s 91ms/step - loss: 3.3714 - accuracy: 0.8602 - val_loss: 3.2189 - val_accuracy: 0.9100\n",
+      "11/11 [==============================] - 1s 93ms/step - loss: 27.2592 - accuracy: 0.8563 - val_loss: 22.0374 - val_accuracy: 0.8900\n",
       "Epoch 5/15\n",
-      "11/11 [==============================] - 1s 96ms/step - loss: 3.2270 - accuracy: 0.8506 - val_loss: 3.0207 - val_accuracy: 0.9000\n",
+      "11/11 [==============================] - 1s 104ms/step - loss: 18.8225 - accuracy: 0.8487 - val_loss: 15.6368 - val_accuracy: 0.9100\n",
       "Epoch 6/15\n",
-      "11/11 [==============================] - 1s 93ms/step - loss: 3.0215 - accuracy: 0.8831 - val_loss: 2.9394 - val_accuracy: 0.9600\n",
+      "11/11 [==============================] - 1s 90ms/step - loss: 13.8245 - accuracy: 0.8352 - val_loss: 11.7130 - val_accuracy: 0.9000\n",
       "Epoch 7/15\n",
-      "11/11 [==============================] - 1s 87ms/step - loss: 3.0745 - accuracy: 0.8372 - val_loss: 2.9333 - val_accuracy: 0.8700\n",
+      "11/11 [==============================] - 1s 86ms/step - loss: 10.5071 - accuracy: 0.8736 - val_loss: 9.2212 - val_accuracy: 0.8600\n",
       "Epoch 8/15\n",
-      "11/11 [==============================] - 1s 89ms/step - loss: 2.9138 - accuracy: 0.8525 - val_loss: 2.8049 - val_accuracy: 0.8800\n",
+      "11/11 [==============================] - 1s 94ms/step - loss: 8.3901 - accuracy: 0.8640 - val_loss: 7.5108 - val_accuracy: 0.8700\n",
       "Epoch 9/15\n",
-      "11/11 [==============================] - 1s 82ms/step - loss: 2.8990 - accuracy: 0.8621 - val_loss: 2.9499 - val_accuracy: 0.9000\n",
+      "11/11 [==============================] - 1s 83ms/step - loss: 7.0192 - accuracy: 0.8544 - val_loss: 6.3453 - val_accuracy: 0.8800\n",
       "Epoch 10/15\n",
-      "11/11 [==============================] - 1s 81ms/step - loss: 2.9534 - accuracy: 0.8333 - val_loss: 2.9669 - val_accuracy: 0.9400\n",
+      "11/11 [==============================] - 1s 82ms/step - loss: 5.9690 - accuracy: 0.8640 - val_loss: 5.5901 - val_accuracy: 0.8700\n",
       "Epoch 11/15\n",
-      "11/11 [==============================] - 1s 84ms/step - loss: 2.9988 - accuracy: 0.8640 - val_loss: 2.8337 - val_accuracy: 0.9400\n",
+      "11/11 [==============================] - 1s 85ms/step - loss: 5.3022 - accuracy: 0.8716 - val_loss: 4.8862 - val_accuracy: 0.9200\n",
       "Epoch 12/15\n",
-      "11/11 [==============================] - 1s 85ms/step - loss: 2.8177 - accuracy: 0.8621 - val_loss: 2.6631 - val_accuracy: 0.9300\n",
+      "11/11 [==============================] - 1s 83ms/step - loss: 4.7596 - accuracy: 0.8655 - val_loss: 4.5867 - val_accuracy: 0.9300\n",
       "Epoch 13/15\n",
-      "11/11 [==============================] - 1s 86ms/step - loss: 2.6604 - accuracy: 0.8774 - val_loss: 2.5312 - val_accuracy: 0.9600\n",
+      "11/11 [==============================] - 1s 87ms/step - loss: 4.4664 - accuracy: 0.8640 - val_loss: 4.2377 - val_accuracy: 0.9000\n",
       "Epoch 14/15\n",
-      "11/11 [==============================] - 1s 82ms/step - loss: 2.6324 - accuracy: 0.8812 - val_loss: 2.7203 - val_accuracy: 0.8900\n",
+      "11/11 [==============================] - 1s 83ms/step - loss: 4.1114 - accuracy: 0.8736 - val_loss: 3.9025 - val_accuracy: 0.9200\n",
       "Epoch 15/15\n",
-      "11/11 [==============================] - 1s 85ms/step - loss: 2.8254 - accuracy: 0.8870 - val_loss: 2.8211 - val_accuracy: 0.9100\n"
+      "11/11 [==============================] - 1s 84ms/step - loss: 3.9459 - accuracy: 0.8525 - val_loss: 3.7884 - val_accuracy: 0.9300\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2278cdfd760>"
+       "<keras.callbacks.History at 0x28e495961f0>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 39,
    "id": "e1dc041c",
    "metadata": {},
    "outputs": [
@@ -825,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 40,
    "id": "0fbfaf7a",
    "metadata": {},
    "outputs": [],
@@ -835,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 41,
    "id": "e3d3c86c",
    "metadata": {},
    "outputs": [],
@@ -845,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 42,
    "id": "888d4d58",
    "metadata": {},
    "outputs": [],
@@ -855,17 +878,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 43,
    "id": "38a7eccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9523809523809523"
+       "0.9242424242424242"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,17 +899,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 44,
    "id": "6db4c97d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8695652173913043"
+       "0.8840579710144928"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
