add notes to Exploratory Analysis

--- a/notebooks/Exploratory Analysis I.ipynb
+++ b/notebooks/Exploratory Analysis I.ipynb
@@ -36,6 +36,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4601addb",
+   "metadata": {},
+   "source": [
+    "<strong>Read all file paths for the images in the dataset1 directory</strong>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "id": "d713b69c",
@@ -139,6 +147,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6786367",
+   "metadata": {},
+   "source": [
+    "<strong>Investigate class distribution, to see if there is no sample bias</strong>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "id": "53803a57",
@@ -195,6 +211,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc6b712e",
+   "metadata": {},
+   "source": [
+    "<strong>Read &amp; View a few images from the dataset</strong>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "id": "c3490772",
@@ -220,6 +244,14 @@
     "    plt.subplot(int(len(images)/ columns + 1), columns, i + 1)\n",
     "    plt.imshow(images[i])\n",
     "    plt.title('Image #{} : '.format(i+1) + class_names[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d94214ee",
+   "metadata": {},
+   "source": [
+    "<strong>Save dataset paths + categories</strong>"
    ]
   },
   {
