added predictions for dataset2

--- a/notebooks/Predict on unknown.ipynb
+++ b/notebooks/Predict on unknown.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "id": "c07e657f",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "473157fd",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "id": "f294c13c",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "id": "c5490cc4",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "id": "f58b1783",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "id": "6156e55b",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "id": "2c4ddf87",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "4  13.png"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "id": "e2bd8f26",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "id": "00ce3da6",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "id": "2eb41f47",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "id": "da6c2be7",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "id": "4b6f2219",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "id": "8c6a3e0c",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "(50, 128, 128, 1)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "id": "7368d1ef",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "id": "493c75d4",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "id": "cfc84d48",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "id": "ba677d09",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "id": "a0aa29ce",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "id": "b2f317f2",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>24.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -399,7 +399,7 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>27.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -549,7 +549,7 @@
        "    <tr>\n",
        "      <th>49</th>\n",
        "      <td>9.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -573,10 +573,10 @@
        "13  21.png   normal\n",
        "14  22.png     sick\n",
        "15  23.png   normal\n",
-       "16  24.png   normal\n",
+       "16  24.png     sick\n",
        "17  25.png   normal\n",
        "18  26.png     sick\n",
-       "19  27.png   normal\n",
+       "19  27.png     sick\n",
        "20  28.png     sick\n",
        "21  29.png   normal\n",
        "22   3.png   normal\n",
@@ -606,10 +606,10 @@
        "46   6.png     sick\n",
        "47   7.png   normal\n",
        "48   8.png     sick\n",
-       "49   9.png     sick"
+       "49   9.png   normal"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "id": "fc4e2ef2",
    "metadata": {},
    "outputs": [],
@@ -630,21 +630,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "id": "d0cd6c5d",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"../unknown_data_predictions.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "220317b6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
