--- a/notebooks/Prepare dataset + train .ipynb
+++ b/notebooks/Prepare dataset + train .ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2af44aab",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7ca427cb",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5b5fbf96",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "3daf05f2",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "cce10416",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "4ffc7269",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "[715 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d47e6d0c",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e2b35a1f",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
        "[572 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "dd0e13d5",
    "metadata": {},
    "outputs": [],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "54fcf814",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "376740ab",
    "metadata": {},
    "outputs": [],
@@ -464,17 +464,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "0c54576c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x28e474a18e0>"
+       "<matplotlib.image.AxesImage at 0x1eb7c200820>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9530b0f1",
    "metadata": {},
    "outputs": [],
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "b6151187",
    "metadata": {},
    "outputs": [],
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "c456f54e",
    "metadata": {},
    "outputs": [],
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "cac8b583",
    "metadata": {},
    "outputs": [],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "56d8b35b",
    "metadata": {},
    "outputs": [],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "1348806a",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "cfb1fcb8",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "(572, 128, 128, 1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "47b1f785",
    "metadata": {},
    "outputs": [],
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "99a66c39",
    "metadata": {},
    "outputs": [],
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "2c57dafe",
    "metadata": {},
    "outputs": [],
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "31f2d776",
    "metadata": {},
    "outputs": [],
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "a9bca121",
    "metadata": {},
    "outputs": [],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "370c5929",
    "metadata": {},
    "outputs": [],
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "bf436615",
    "metadata": {},
    "outputs": [],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "13cddea8",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "004766c4",
    "metadata": {},
    "outputs": [],
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "da9a7355",
    "metadata": {},
    "outputs": [],
@@ -736,18 +736,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "7ac7e5f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "EPOCHS = 15\n",
-    "BATCH_SIZE = 50"
+    "BATCH_SIZE = 30"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "4e936e79",
    "metadata": {},
    "outputs": [],
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "daaa042c",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Taufeeq\\AppData\\Local\\Temp/ipykernel_31644/425097378.py:5: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+      "C:\\Users\\Taufeeq\\AppData\\Local\\Temp/ipykernel_19804/425097378.py:5: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
       "  model.fit_generator(train_generator, steps_per_epoch=steps_per_epoch, epochs=EPOCHS,\n"
      ]
     },
@@ -776,44 +776,44 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "11/11 [==============================] - 2s 107ms/step - loss: 138.0112 - accuracy: 0.6494 - val_loss: 86.9224 - val_accuracy: 0.7500\n",
+      "19/19 [==============================] - 2s 68ms/step - loss: 109.1110 - accuracy: 0.6937 - val_loss: 55.3407 - val_accuracy: 0.8667\n",
       "Epoch 2/15\n",
-      "11/11 [==============================] - 1s 89ms/step - loss: 65.1070 - accuracy: 0.7874 - val_loss: 50.3014 - val_accuracy: 0.8600\n",
+      "19/19 [==============================] - 1s 59ms/step - loss: 40.9455 - accuracy: 0.7638 - val_loss: 27.0671 - val_accuracy: 0.7833\n",
       "Epoch 3/15\n",
-      "11/11 [==============================] - 1s 93ms/step - loss: 41.5673 - accuracy: 0.8295 - val_loss: 31.9791 - val_accuracy: 0.9100\n",
+      "19/19 [==============================] - 1s 61ms/step - loss: 19.9597 - accuracy: 0.8118 - val_loss: 14.4607 - val_accuracy: 0.8167\n",
       "Epoch 4/15\n",
-      "11/11 [==============================] - 1s 93ms/step - loss: 27.2592 - accuracy: 0.8563 - val_loss: 22.0374 - val_accuracy: 0.8900\n",
+      "19/19 [==============================] - 1s 63ms/step - loss: 11.3912 - accuracy: 0.8266 - val_loss: 9.1556 - val_accuracy: 0.7833\n",
       "Epoch 5/15\n",
-      "11/11 [==============================] - 1s 104ms/step - loss: 18.8225 - accuracy: 0.8487 - val_loss: 15.6368 - val_accuracy: 0.9100\n",
+      "19/19 [==============================] - 1s 59ms/step - loss: 7.7318 - accuracy: 0.8469 - val_loss: 6.3779 - val_accuracy: 0.8917\n",
       "Epoch 6/15\n",
-      "11/11 [==============================] - 1s 90ms/step - loss: 13.8245 - accuracy: 0.8352 - val_loss: 11.7130 - val_accuracy: 0.9000\n",
+      "19/19 [==============================] - 1s 60ms/step - loss: 5.8640 - accuracy: 0.8247 - val_loss: 5.3055 - val_accuracy: 0.8833\n",
       "Epoch 7/15\n",
-      "11/11 [==============================] - 1s 86ms/step - loss: 10.5071 - accuracy: 0.8736 - val_loss: 9.2212 - val_accuracy: 0.8600\n",
+      "19/19 [==============================] - 1s 62ms/step - loss: 5.0084 - accuracy: 0.8487 - val_loss: 4.7551 - val_accuracy: 0.8583\n",
       "Epoch 8/15\n",
-      "11/11 [==============================] - 1s 94ms/step - loss: 8.3901 - accuracy: 0.8640 - val_loss: 7.5108 - val_accuracy: 0.8700\n",
+      "19/19 [==============================] - 1s 60ms/step - loss: 4.4152 - accuracy: 0.8506 - val_loss: 4.0526 - val_accuracy: 0.8667\n",
       "Epoch 9/15\n",
-      "11/11 [==============================] - 1s 83ms/step - loss: 7.0192 - accuracy: 0.8544 - val_loss: 6.3453 - val_accuracy: 0.8800\n",
+      "19/19 [==============================] - 1s 54ms/step - loss: 4.3200 - accuracy: 0.8376 - val_loss: 4.1582 - val_accuracy: 0.8667\n",
       "Epoch 10/15\n",
-      "11/11 [==============================] - 1s 82ms/step - loss: 5.9690 - accuracy: 0.8640 - val_loss: 5.5901 - val_accuracy: 0.8700\n",
+      "19/19 [==============================] - 1s 54ms/step - loss: 3.9184 - accuracy: 0.8524 - val_loss: 4.0538 - val_accuracy: 0.8000\n",
       "Epoch 11/15\n",
-      "11/11 [==============================] - 1s 85ms/step - loss: 5.3022 - accuracy: 0.8716 - val_loss: 4.8862 - val_accuracy: 0.9200\n",
+      "19/19 [==============================] - 1s 52ms/step - loss: 3.8186 - accuracy: 0.8413 - val_loss: 3.7603 - val_accuracy: 0.8917\n",
       "Epoch 12/15\n",
-      "11/11 [==============================] - 1s 83ms/step - loss: 4.7596 - accuracy: 0.8655 - val_loss: 4.5867 - val_accuracy: 0.9300\n",
+      "19/19 [==============================] - 1s 56ms/step - loss: 3.7360 - accuracy: 0.8432 - val_loss: 4.0453 - val_accuracy: 0.7667\n",
       "Epoch 13/15\n",
-      "11/11 [==============================] - 1s 87ms/step - loss: 4.4664 - accuracy: 0.8640 - val_loss: 4.2377 - val_accuracy: 0.9000\n",
+      "19/19 [==============================] - 1s 55ms/step - loss: 4.2233 - accuracy: 0.8155 - val_loss: 3.8572 - val_accuracy: 0.8667\n",
       "Epoch 14/15\n",
-      "11/11 [==============================] - 1s 83ms/step - loss: 4.1114 - accuracy: 0.8736 - val_loss: 3.9025 - val_accuracy: 0.9200\n",
+      "19/19 [==============================] - 1s 54ms/step - loss: 3.7989 - accuracy: 0.8137 - val_loss: 3.5726 - val_accuracy: 0.9000\n",
       "Epoch 15/15\n",
-      "11/11 [==============================] - 1s 84ms/step - loss: 3.9459 - accuracy: 0.8525 - val_loss: 3.7884 - val_accuracy: 0.9300\n"
+      "19/19 [==============================] - 1s 55ms/step - loss: 3.4978 - accuracy: 0.8450 - val_loss: 3.1674 - val_accuracy: 0.9000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x28e495961f0>"
+       "<keras.callbacks.History at 0x1eb7c262f70>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "e1dc041c",
    "metadata": {},
    "outputs": [
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "0fbfaf7a",
    "metadata": {},
    "outputs": [],
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "e3d3c86c",
    "metadata": {},
    "outputs": [],
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "888d4d58",
    "metadata": {},
    "outputs": [],
@@ -878,17 +878,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "38a7eccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9242424242424242"
+       "0.9104477611940298"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "6db4c97d",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
        "0.8840579710144928"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
