increasing regularization term

--- a/notebooks/Predict on unknown.ipynb
+++ b/notebooks/Predict on unknown.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "id": "c07e657f",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "id": "473157fd",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "id": "f294c13c",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "id": "c5490cc4",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 69,
    "id": "f58b1783",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 70,
    "id": "6156e55b",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 71,
    "id": "2c4ddf87",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "4  13.png"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "id": "e2bd8f26",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 73,
    "id": "00ce3da6",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 74,
    "id": "2eb41f47",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "id": "da6c2be7",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "id": "4b6f2219",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "id": "8c6a3e0c",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "(50, 128, 128, 1)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "id": "7368d1ef",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 79,
    "id": "493c75d4",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "id": "cfc84d48",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 81,
    "id": "ba677d09",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 82,
    "id": "a0aa29ce",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 83,
    "id": "b2f317f2",
    "metadata": {},
    "outputs": [
@@ -344,7 +344,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>17.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -354,7 +354,7 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>19.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -459,7 +459,7 @@
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>38.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -504,7 +504,7 @@
        "    <tr>\n",
        "      <th>40</th>\n",
        "      <td>46.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
@@ -549,7 +549,7 @@
        "    <tr>\n",
        "      <th>49</th>\n",
        "      <td>9.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -565,9 +565,9 @@
        "5   14.png     sick\n",
        "6   15.png   normal\n",
        "7   16.png     sick\n",
-       "8   17.png   normal\n",
+       "8   17.png     sick\n",
        "9   18.png     sick\n",
-       "10  19.png   normal\n",
+       "10  19.png     sick\n",
        "11   2.png     sick\n",
        "12  20.png     sick\n",
        "13  21.png   normal\n",
@@ -588,7 +588,7 @@
        "28  35.png   normal\n",
        "29  36.png     sick\n",
        "30  37.png   normal\n",
-       "31  38.png   normal\n",
+       "31  38.png     sick\n",
        "32  39.png   normal\n",
        "33   4.png     sick\n",
        "34  40.png     sick\n",
@@ -597,7 +597,7 @@
        "37  43.png   normal\n",
        "38  44.png     sick\n",
        "39  45.png   normal\n",
-       "40  46.png   normal\n",
+       "40  46.png     sick\n",
        "41  47.png   normal\n",
        "42  48.png     sick\n",
        "43  49.png   normal\n",
@@ -606,10 +606,10 @@
        "46   6.png     sick\n",
        "47   7.png   normal\n",
        "48   8.png     sick\n",
-       "49   9.png   normal"
+       "49   9.png     sick"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 84,
    "id": "fc4e2ef2",
    "metadata": {},
    "outputs": [],
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 85,
    "id": "d0cd6c5d",
    "metadata": {},
    "outputs": [],
