--- a/notebooks/Prepare dataset + train .ipynb
+++ b/notebooks/Prepare dataset + train .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "id": "1a73e17b",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,8 @@
     "import keras\n",
     "import keras.layers as layers\n",
     "from keras.models import Sequential\n",
+    "from keras.regularizers import l1\n",
+    "\n",
     "import cv2\n",
     "from sklearn import preprocessing\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "id": "2c801b2b",
    "metadata": {},
    "outputs": [],
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "id": "bf436615",
    "metadata": {},
    "outputs": [],
@@ -663,7 +665,7 @@
     "\n",
     "model.add(layers.Flatten())\n",
     "\n",
-    "model.add(layers.Dense(units=120, activation='relu',kernel_regularizer='l1'))\n",
+    "model.add(layers.Dense(units=120, activation='relu',kernel_regularizer=l1(0.05)))\n",
     "\n",
     "model.add(layers.Dense(units=84, activation='relu'))\n",
     "\n",
@@ -672,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 51,
    "id": "13cddea8",
    "metadata": {},
    "outputs": [
@@ -680,27 +682,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d (Conv2D)             (None, 126, 126, 6)       60        \n",
+      " conv2d_4 (Conv2D)           (None, 126, 126, 6)       60        \n",
       "                                                                 \n",
-      " average_pooling2d (AverageP  (None, 63, 63, 6)        0         \n",
-      " ooling2D)                                                       \n",
-      "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 61, 61, 16)        880       \n",
-      "                                                                 \n",
-      " average_pooling2d_1 (Averag  (None, 30, 30, 16)       0         \n",
+      " average_pooling2d_4 (Averag  (None, 63, 63, 6)        0         \n",
       " ePooling2D)                                                     \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 14400)             0         \n",
+      " conv2d_5 (Conv2D)           (None, 61, 61, 16)        880       \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 120)               1728120   \n",
+      " average_pooling2d_5 (Averag  (None, 30, 30, 16)       0         \n",
+      " ePooling2D)                                                     \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 84)                10164     \n",
+      " flatten_2 (Flatten)         (None, 14400)             0         \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 1)                 85        \n",
+      " dense_6 (Dense)             (None, 120)               1728120   \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 84)                10164     \n",
+      "                                                                 \n",
+      " dense_8 (Dense)             (None, 1)                 85        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1,739,309\n",
@@ -716,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "id": "004766c4",
    "metadata": {},
    "outputs": [],
@@ -726,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "id": "da9a7355",
    "metadata": {},
    "outputs": [],
@@ -736,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "id": "7ac7e5f8",
    "metadata": {},
    "outputs": [],
@@ -747,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "id": "4e936e79",
    "metadata": {},
    "outputs": [],
@@ -759,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "id": "daaa042c",
    "metadata": {},
    "outputs": [
@@ -776,44 +778,44 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "19/19 [==============================] - 2s 68ms/step - loss: 109.1110 - accuracy: 0.6937 - val_loss: 55.3407 - val_accuracy: 0.8667\n",
+      "19/19 [==============================] - 2s 69ms/step - loss: 438.8293 - accuracy: 0.6790 - val_loss: 151.8030 - val_accuracy: 0.6667\n",
       "Epoch 2/15\n",
-      "19/19 [==============================] - 1s 59ms/step - loss: 40.9455 - accuracy: 0.7638 - val_loss: 27.0671 - val_accuracy: 0.7833\n",
+      "19/19 [==============================] - 1s 58ms/step - loss: 103.5248 - accuracy: 0.7306 - val_loss: 59.6394 - val_accuracy: 0.7750\n",
       "Epoch 3/15\n",
-      "19/19 [==============================] - 1s 61ms/step - loss: 19.9597 - accuracy: 0.8118 - val_loss: 14.4607 - val_accuracy: 0.8167\n",
+      "19/19 [==============================] - 1s 61ms/step - loss: 39.9624 - accuracy: 0.7731 - val_loss: 24.4789 - val_accuracy: 0.8667\n",
       "Epoch 4/15\n",
-      "19/19 [==============================] - 1s 63ms/step - loss: 11.3912 - accuracy: 0.8266 - val_loss: 9.1556 - val_accuracy: 0.7833\n",
+      "19/19 [==============================] - 1s 66ms/step - loss: 19.3011 - accuracy: 0.7965 - val_loss: 15.1259 - val_accuracy: 0.9083\n",
       "Epoch 5/15\n",
-      "19/19 [==============================] - 1s 59ms/step - loss: 7.7318 - accuracy: 0.8469 - val_loss: 6.3779 - val_accuracy: 0.8917\n",
+      "19/19 [==============================] - 1s 60ms/step - loss: 13.9101 - accuracy: 0.7989 - val_loss: 12.8627 - val_accuracy: 0.8833\n",
       "Epoch 6/15\n",
-      "19/19 [==============================] - 1s 60ms/step - loss: 5.8640 - accuracy: 0.8247 - val_loss: 5.3055 - val_accuracy: 0.8833\n",
+      "19/19 [==============================] - 1s 63ms/step - loss: 12.4814 - accuracy: 0.8063 - val_loss: 12.5399 - val_accuracy: 0.7583\n",
       "Epoch 7/15\n",
-      "19/19 [==============================] - 1s 62ms/step - loss: 5.0084 - accuracy: 0.8487 - val_loss: 4.7551 - val_accuracy: 0.8583\n",
+      "19/19 [==============================] - 1s 59ms/step - loss: 12.7206 - accuracy: 0.7417 - val_loss: 13.4895 - val_accuracy: 0.8917\n",
       "Epoch 8/15\n",
-      "19/19 [==============================] - 1s 60ms/step - loss: 4.4152 - accuracy: 0.8506 - val_loss: 4.0526 - val_accuracy: 0.8667\n",
+      "19/19 [==============================] - 1s 62ms/step - loss: 13.1038 - accuracy: 0.7878 - val_loss: 12.2073 - val_accuracy: 0.8833\n",
       "Epoch 9/15\n",
-      "19/19 [==============================] - 1s 54ms/step - loss: 4.3200 - accuracy: 0.8376 - val_loss: 4.1582 - val_accuracy: 0.8667\n",
+      "19/19 [==============================] - 1s 53ms/step - loss: 12.1529 - accuracy: 0.7934 - val_loss: 12.1270 - val_accuracy: 0.8583\n",
       "Epoch 10/15\n",
-      "19/19 [==============================] - 1s 54ms/step - loss: 3.9184 - accuracy: 0.8524 - val_loss: 4.0538 - val_accuracy: 0.8000\n",
+      "19/19 [==============================] - 1s 52ms/step - loss: 12.0582 - accuracy: 0.8118 - val_loss: 12.7266 - val_accuracy: 0.8500\n",
       "Epoch 11/15\n",
-      "19/19 [==============================] - 1s 52ms/step - loss: 3.8186 - accuracy: 0.8413 - val_loss: 3.7603 - val_accuracy: 0.8917\n",
+      "19/19 [==============================] - 1s 55ms/step - loss: 12.9768 - accuracy: 0.7804 - val_loss: 12.2127 - val_accuracy: 0.9500\n",
       "Epoch 12/15\n",
-      "19/19 [==============================] - 1s 56ms/step - loss: 3.7360 - accuracy: 0.8432 - val_loss: 4.0453 - val_accuracy: 0.7667\n",
+      "19/19 [==============================] - 1s 54ms/step - loss: 12.1577 - accuracy: 0.7989 - val_loss: 11.9097 - val_accuracy: 0.8417\n",
       "Epoch 13/15\n",
-      "19/19 [==============================] - 1s 55ms/step - loss: 4.2233 - accuracy: 0.8155 - val_loss: 3.8572 - val_accuracy: 0.8667\n",
+      "19/19 [==============================] - 1s 53ms/step - loss: 12.7506 - accuracy: 0.7786 - val_loss: 12.4262 - val_accuracy: 0.8333\n",
       "Epoch 14/15\n",
-      "19/19 [==============================] - 1s 54ms/step - loss: 3.7989 - accuracy: 0.8137 - val_loss: 3.5726 - val_accuracy: 0.9000\n",
+      "19/19 [==============================] - 1s 54ms/step - loss: 11.9543 - accuracy: 0.8081 - val_loss: 11.3737 - val_accuracy: 0.9083\n",
       "Epoch 15/15\n",
-      "19/19 [==============================] - 1s 55ms/step - loss: 3.4978 - accuracy: 0.8450 - val_loss: 3.1674 - val_accuracy: 0.9000\n"
+      "19/19 [==============================] - 1s 53ms/step - loss: 11.3401 - accuracy: 0.8339 - val_loss: 11.2508 - val_accuracy: 0.8833\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1eb7c262f70>"
+       "<keras.callbacks.History at 0x1eb0b06c190>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "id": "e1dc041c",
    "metadata": {},
    "outputs": [
@@ -848,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "id": "0fbfaf7a",
    "metadata": {},
    "outputs": [],
@@ -858,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 59,
    "id": "e3d3c86c",
    "metadata": {},
    "outputs": [],
@@ -868,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "id": "888d4d58",
    "metadata": {},
    "outputs": [],
@@ -878,17 +880,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "id": "38a7eccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9104477611940298"
+       "0.8072289156626506"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,17 +901,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 62,
    "id": "6db4c97d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8840579710144928"
+       "0.9710144927536232"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
