--- a/notebooks/Prepare dataset + train .ipynb
+++ b/notebooks/Prepare dataset + train .ipynb
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "id": "bf436615",
    "metadata": {},
    "outputs": [],
@@ -665,7 +665,7 @@
     "\n",
     "model.add(layers.Flatten())\n",
     "\n",
-    "model.add(layers.Dense(units=120, activation='relu',kernel_regularizer=l1(0.05)))\n",
+    "model.add(layers.Dense(units=120, activation='relu',kernel_regularizer=l1(0.1)))\n",
     "\n",
     "model.add(layers.Dense(units=84, activation='relu'))\n",
     "\n",
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "id": "13cddea8",
    "metadata": {},
    "outputs": [
@@ -682,27 +682,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_4 (Conv2D)           (None, 126, 126, 6)       60        \n",
+      " conv2d_6 (Conv2D)           (None, 126, 126, 6)       60        \n",
       "                                                                 \n",
-      " average_pooling2d_4 (Averag  (None, 63, 63, 6)        0         \n",
+      " average_pooling2d_6 (Averag  (None, 63, 63, 6)        0         \n",
       " ePooling2D)                                                     \n",
       "                                                                 \n",
-      " conv2d_5 (Conv2D)           (None, 61, 61, 16)        880       \n",
+      " conv2d_7 (Conv2D)           (None, 61, 61, 16)        880       \n",
       "                                                                 \n",
-      " average_pooling2d_5 (Averag  (None, 30, 30, 16)       0         \n",
+      " average_pooling2d_7 (Averag  (None, 30, 30, 16)       0         \n",
       " ePooling2D)                                                     \n",
       "                                                                 \n",
-      " flatten_2 (Flatten)         (None, 14400)             0         \n",
+      " flatten_3 (Flatten)         (None, 14400)             0         \n",
       "                                                                 \n",
-      " dense_6 (Dense)             (None, 120)               1728120   \n",
+      " dense_9 (Dense)             (None, 120)               1728120   \n",
       "                                                                 \n",
-      " dense_7 (Dense)             (None, 84)                10164     \n",
+      " dense_10 (Dense)            (None, 84)                10164     \n",
       "                                                                 \n",
-      " dense_8 (Dense)             (None, 1)                 85        \n",
+      " dense_11 (Dense)            (None, 1)                 85        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1,739,309\n",
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "id": "004766c4",
    "metadata": {},
    "outputs": [],
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "id": "da9a7355",
    "metadata": {},
    "outputs": [],
@@ -738,18 +738,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "id": "7ac7e5f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 15\n",
+    "EPOCHS = 18\n",
     "BATCH_SIZE = 30"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "id": "4e936e79",
    "metadata": {},
    "outputs": [],
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "id": "daaa042c",
    "metadata": {},
    "outputs": [
@@ -777,45 +777,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/15\n",
-      "19/19 [==============================] - 2s 69ms/step - loss: 438.8293 - accuracy: 0.6790 - val_loss: 151.8030 - val_accuracy: 0.6667\n",
-      "Epoch 2/15\n",
-      "19/19 [==============================] - 1s 58ms/step - loss: 103.5248 - accuracy: 0.7306 - val_loss: 59.6394 - val_accuracy: 0.7750\n",
-      "Epoch 3/15\n",
-      "19/19 [==============================] - 1s 61ms/step - loss: 39.9624 - accuracy: 0.7731 - val_loss: 24.4789 - val_accuracy: 0.8667\n",
-      "Epoch 4/15\n",
-      "19/19 [==============================] - 1s 66ms/step - loss: 19.3011 - accuracy: 0.7965 - val_loss: 15.1259 - val_accuracy: 0.9083\n",
-      "Epoch 5/15\n",
-      "19/19 [==============================] - 1s 60ms/step - loss: 13.9101 - accuracy: 0.7989 - val_loss: 12.8627 - val_accuracy: 0.8833\n",
-      "Epoch 6/15\n",
-      "19/19 [==============================] - 1s 63ms/step - loss: 12.4814 - accuracy: 0.8063 - val_loss: 12.5399 - val_accuracy: 0.7583\n",
-      "Epoch 7/15\n",
-      "19/19 [==============================] - 1s 59ms/step - loss: 12.7206 - accuracy: 0.7417 - val_loss: 13.4895 - val_accuracy: 0.8917\n",
-      "Epoch 8/15\n",
-      "19/19 [==============================] - 1s 62ms/step - loss: 13.1038 - accuracy: 0.7878 - val_loss: 12.2073 - val_accuracy: 0.8833\n",
-      "Epoch 9/15\n",
-      "19/19 [==============================] - 1s 53ms/step - loss: 12.1529 - accuracy: 0.7934 - val_loss: 12.1270 - val_accuracy: 0.8583\n",
-      "Epoch 10/15\n",
-      "19/19 [==============================] - 1s 52ms/step - loss: 12.0582 - accuracy: 0.8118 - val_loss: 12.7266 - val_accuracy: 0.8500\n",
-      "Epoch 11/15\n",
-      "19/19 [==============================] - 1s 55ms/step - loss: 12.9768 - accuracy: 0.7804 - val_loss: 12.2127 - val_accuracy: 0.9500\n",
-      "Epoch 12/15\n",
-      "19/19 [==============================] - 1s 54ms/step - loss: 12.1577 - accuracy: 0.7989 - val_loss: 11.9097 - val_accuracy: 0.8417\n",
-      "Epoch 13/15\n",
-      "19/19 [==============================] - 1s 53ms/step - loss: 12.7506 - accuracy: 0.7786 - val_loss: 12.4262 - val_accuracy: 0.8333\n",
-      "Epoch 14/15\n",
-      "19/19 [==============================] - 1s 54ms/step - loss: 11.9543 - accuracy: 0.8081 - val_loss: 11.3737 - val_accuracy: 0.9083\n",
-      "Epoch 15/15\n",
-      "19/19 [==============================] - 1s 53ms/step - loss: 11.3401 - accuracy: 0.8339 - val_loss: 11.2508 - val_accuracy: 0.8833\n"
+      "Epoch 1/18\n",
+      "19/19 [==============================] - 2s 74ms/step - loss: 807.7003 - accuracy: 0.7306 - val_loss: 252.8042 - val_accuracy: 0.8583\n",
+      "Epoch 2/18\n",
+      "19/19 [==============================] - 1s 62ms/step - loss: 168.8263 - accuracy: 0.7565 - val_loss: 87.4602 - val_accuracy: 0.8333\n",
+      "Epoch 3/18\n",
+      "19/19 [==============================] - 1s 62ms/step - loss: 56.6193 - accuracy: 0.7786 - val_loss: 36.3230 - val_accuracy: 0.8583\n",
+      "Epoch 4/18\n",
+      "19/19 [==============================] - 1s 64ms/step - loss: 30.9366 - accuracy: 0.7509 - val_loss: 27.0769 - val_accuracy: 0.7000\n",
+      "Epoch 5/18\n",
+      "19/19 [==============================] - 1s 64ms/step - loss: 25.4729 - accuracy: 0.7325 - val_loss: 24.2663 - val_accuracy: 0.8167\n",
+      "Epoch 6/18\n",
+      "19/19 [==============================] - 1s 63ms/step - loss: 23.8100 - accuracy: 0.7989 - val_loss: 23.6580 - val_accuracy: 0.9000\n",
+      "Epoch 7/18\n",
+      "19/19 [==============================] - 1s 63ms/step - loss: 23.2745 - accuracy: 0.7657 - val_loss: 23.4985 - val_accuracy: 0.8500\n",
+      "Epoch 8/18\n",
+      "19/19 [==============================] - 1s 61ms/step - loss: 23.7415 - accuracy: 0.7269 - val_loss: 23.6726 - val_accuracy: 0.7000\n",
+      "Epoch 9/18\n",
+      "19/19 [==============================] - 1s 55ms/step - loss: 23.1757 - accuracy: 0.7804 - val_loss: 22.5132 - val_accuracy: 0.6750\n",
+      "Epoch 10/18\n",
+      "19/19 [==============================] - 1s 55ms/step - loss: 22.6046 - accuracy: 0.7841 - val_loss: 23.7117 - val_accuracy: 0.8667\n",
+      "Epoch 11/18\n",
+      "19/19 [==============================] - 1s 55ms/step - loss: 22.7196 - accuracy: 0.8155 - val_loss: 22.0974 - val_accuracy: 0.8417\n",
+      "Epoch 12/18\n",
+      "19/19 [==============================] - 1s 55ms/step - loss: 21.9215 - accuracy: 0.7989 - val_loss: 21.7315 - val_accuracy: 0.8583\n",
+      "Epoch 13/18\n",
+      "19/19 [==============================] - 1s 55ms/step - loss: 23.3981 - accuracy: 0.7768 - val_loss: 21.9723 - val_accuracy: 0.8667\n",
+      "Epoch 14/18\n",
+      "19/19 [==============================] - 1s 57ms/step - loss: 21.3378 - accuracy: 0.8193 - val_loss: 20.9023 - val_accuracy: 0.8917\n",
+      "Epoch 15/18\n",
+      "19/19 [==============================] - 1s 56ms/step - loss: 21.0244 - accuracy: 0.8210 - val_loss: 20.8431 - val_accuracy: 0.8333\n",
+      "Epoch 16/18\n",
+      "19/19 [==============================] - 1s 57ms/step - loss: 21.6894 - accuracy: 0.8007 - val_loss: 21.6362 - val_accuracy: 0.8750\n",
+      "Epoch 17/18\n",
+      "19/19 [==============================] - 1s 55ms/step - loss: 21.2099 - accuracy: 0.8081 - val_loss: 20.7518 - val_accuracy: 0.8917\n",
+      "Epoch 18/18\n",
+      "19/19 [==============================] - 1s 57ms/step - loss: 21.3095 - accuracy: 0.8044 - val_loss: 21.3858 - val_accuracy: 0.8833\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1eb0b06c190>"
+       "<keras.callbacks.History at 0x1eb0c14d9d0>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "id": "e1dc041c",
    "metadata": {},
    "outputs": [
@@ -850,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "id": "0fbfaf7a",
    "metadata": {},
    "outputs": [],
@@ -860,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 72,
    "id": "e3d3c86c",
    "metadata": {},
    "outputs": [],
@@ -870,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "id": "888d4d58",
    "metadata": {},
    "outputs": [],
@@ -880,17 +886,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "id": "38a7eccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8072289156626506"
+       "0.8709677419354839"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,17 +907,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "id": "6db4c97d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9710144927536232"
+       "0.782608695652174"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
